2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-script-check.c (argp_parser): Remove unused variable.
	(main): Rename read to curread to avoid shadowing.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/misc.c (grub_util_write_image_at): Fix format specification.
	(grub_util_write_image): Likewise.
	(grub_script_execute_argument_to_string): Removed (unused).
	(grub_script_execute_menuentry): Likewise.
	(grub_putchar): Likewise.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/symbol.h (EXT_C) [GRUB_UTIL]: Removed.
	(FUNCTION) [GRUB_UTIL]: Likewise.
	(VARIABLE) [GRUB_UTIL]: Likewise.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h: Avoid evaluationg NEED_ENABLE_EXECUTE_STACK and
	NEED_REGISTER_FRAME_INFO in GRUB_UTIL.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/bsdlabel.c (iterate_real): Fix freeing of static
	buffer.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/LzmaEnc.c (LzmaEnc_FastPosInit): Made static.
	(LzmaEnc_SaveState): Removed (unused).
	(LzmaEnc_RestoreState): Likewise.
	(LzmaEnc_InitPriceTables): Made static.
	(LzmaEnc_Construct): Likewise.
	(LzmaEnc_FreeLits): Likewise.
	(LzmaEnc_Destruct): Likewise.
	(LzmaEnc_Init): Likewise.
	(LzmaEnc_InitPrices): Likewise.
	(LzmaEnc_Finish): Likewise.
	(LzmaEnc_PrepareForLzma2): Removed (unused).
	(LzmaEnc_MemPrepare): Likewise.
	(LzmaEnc_GetNumAvailableBytes): Likewise.
	(LzmaEnc_GetCurBuf): Likewise.
	(LzmaEnc_CodeOneMemBlock): Likewise.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ldm.c (grub_util_get_ldm): Remove unused variables.
	(grub_util_ldm_embed): Likewise.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-editenv.c (print_var): Rename name to varname to
	avoid shadowing.
	(main): Rename index to curindex to avoid shadowing.
	Make filename a const char *.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>
